--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
     </nav>
 
     <!-- Home Section -->
-    <section id="home" class="h-screen bg-cover bg-center" style="background-image: url('https://i2.ppvise.site/gimg/88b160ea05.jpg');">
+    <section id="home" class="h-screen bg-cover bg-center" style="background-image: url('https://images.squarespace-cdn.com/content/v1/590cc57ebe659408c68d77fd/1526321543894-VVKY784KPUC8DKOMMQBQ/Launch%2BHeaderOption2.jpg?format=2500w');">
         <div class="flex items-center justify-center h-full bg-gray-900 bg-opacity-50">
             <div class="text-center text-white">
                 <h1 class="text-4xl md:text-6xl font-bold">Transformez Votre Voix</h1>
