--- a/Home.html
+++ b/Home.html
@@ -78,7 +78,7 @@
 
     <!-- One-to-One Coaching Section -->
 <section id="one-to-one" class="py-16 bg-gray-100">
-    <div class="container mx-auto text-center">
+    <div class="container mx-auto text-center px-4">
         <h2 class="text-4xl font-bold mb-8 text-blue-500">One-to-One Coaching</h2>
         <p class="text-lg leading-relaxed text-gray-700 mb-4">Découvrez nos offres personnalisées pour améliorer vos compétences en prise de parole.</p>
         <button onclick="togglePricing()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Plus de détails</button>
@@ -90,36 +90,36 @@
                 <table class="min-w-full bg-gray-100 rounded-lg shadow-md">
                     <thead>
                         <tr class="bg-blue-500 text-white">
-                            <th class="py-3 px-6 text-left">Type de session</th>
-                            <th class="py-3 px-6 text-left">Durée</th>
-                            <th class="py-3 px-6 text-left">Tarif</th>
-                            <th class="py-3 px-6 text-left">Description</th>
+                            <th class="py-3 px-2 md:px-6 text-left">Type de session</th>
+                            <th class="py-3 px-2 md:px-6 text-left">Durée</th>
+                            <th class="py-3 px-2 md:px-6 text-left">Tarif</th>
+                            <th class="py-3 px-2 md:px-6 text-left">Description</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr class="border-b border-gray-200">
-                            <td class="py-4 px-6">Session Découverte</td>
-                            <td class="py-4 px-6">30 minutes</td>
-                            <td class="py-4 px-6">Gratuit</td>
-                            <td class="py-4 px-6">Évaluation des besoins.</td>
+                            <td class="py-4 px-2 md:px-6">Session Découverte</td>
+                            <td class="py-4 px-2 md:px-6">30 minutes</td>
+                            <td class="py-4 px-2 md:px-6">Gratuit</td>
+                            <td class="py-4 px-2 md:px-6">Évaluation des besoins.</td>
                         </tr>
                         <tr class="border-b border-gray-200">
-                            <td class="py-4 px-6">Coaching Vocal & Gestion du Trac</td>
-                            <td class="py-4 px-6">6 heures</td>
-                            <td class="py-4 px-6">50 000 Fr CFA</td>
-                            <td class="py-4 px-6">Techniques pour améliorer la voix, réduire le trac et gagner en confiance.</td>
+                            <td class="py-4 px-2 md:px-6">Coaching Vocal & Gestion du Trac</td>
+                            <td class="py-4 px-2 md:px-6">6 heures</td>
+                            <td class="py-4 px-2 md:px-6">50 000 Fr CFA</td>
+                            <td class="py-4 px-2 md:px-6">Techniques pour améliorer la voix, réduire le trac et gagner en confiance.</td>
                         </tr>
                         <tr class="border-b border-gray-200">
-                            <td class="py-4 px-6">Prise de Parole Impactante</td>
-                            <td class="py-4 px-6">5 heure</td>
-                            <td class="py-4 px-6">80 000 Fr CFA</td>
-                            <td class="py-4 px-6">Développement d'un discours percutant et captivant.</td>
+                            <td class="py-4 px-2 md:px-6">Prise de Parole Impactante</td>
+                            <td class="py-4 px-2 md:px-6">5 heures</td>
+                            <td class="py-4 px-2 md:px-6">80 000 Fr CFA</td>
+                            <td class="py-4 px-2 md:px-6">Développement d'un discours percutant et captivant.</td>
                         </tr>
                         <tr>
-                            <td class="py-4 px-6">Programme Complet</td>
-                            <td class="py-4 px-6">14  heures</td>
-                            <td class="py-4 px-6">150 000 Fr CFA</td>
-                            <td class="py-4 px-6">Accompagnement global : de la structure du discours à la maîtrise de la scène.</td>
+                            <td class="py-4 px-2 md:px-6">Programme Complet</td>
+                            <td class="py-4 px-2 md:px-6">14 heures</td>
+                            <td class="py-4 px-2 md:px-6">150 000 Fr CFA</td>
+                            <td class="py-4 px-2 md:px-6">Accompagnement global : de la structure du discours à la maîtrise de la scène.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -159,7 +159,7 @@
 
     <!-- Events & Workshops Section -->
 <section id="events" class="py-16 bg-gray-100">
-    <div class="container mx-auto">
+    <div class="container mx-auto px-4">
         <h2 class="text-4xl font-bold mb-8 text-blue-500 text-center">Événements & Ateliers</h2>
         
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -182,8 +182,9 @@
                     <li>Masterclass sur la Prise de Parole - 15 juin 2024</li>
                 </ul>
             </div>
-            <p class="text-lg text-gray-700 mb-4">Rejoignez nos sessions live pour une expérience immersive et interactive. Nos sessions live vous offrent l'opportunité de participer en direct, de poser des questions et de pratiquer en temps réel.</p>
         </div>
+
+        <p class="text-lg text-gray-700 mt-8">Rejoignez nos sessions live pour une expérience immersive et interactive. Nos sessions live vous offrent l'opportunité de participer en direct, de poser des questions et de pratiquer en temps réel.</p>
     </div>
 </section>
 
