--- a/Home.html
+++ b/Home.html
@@ -98,21 +98,21 @@
                 <div class="bg-white rounded-lg shadow-md p-6">
                     <h4 class="text-xl font-bold text-blue-500 mb-2">Coaching Vocal & Gestion du Trac</h4>
                     <p class="text-gray-700 mb-2">Durée : 6 heures</p>
-                    <p class="text-gray-700 font-bold mb-4">Tarif : 50 000 Fr CFA</p>
+                    <p class="text-gray-700 font-bold mb-4">Tarif : Sur demande</p>
                     <p class="text-gray-600">Techniques pour améliorer la voix, réduire le trac et gagner en confiance.</p>
                 </div>
                 <!-- Carte 3: Prise de Parole Impactante -->
                 <div class="bg-white rounded-lg shadow-md p-6">
                     <h4 class="text-xl font-bold text-blue-500 mb-2">Prise de Parole Impactante</h4>
                     <p class="text-gray-700 mb-2">Durée : 5 heures</p>
-                    <p class="text-gray-700 font-bold mb-4">Tarif : 80 000 Fr CFA</p>
+                    <p class="text-gray-700 font-bold mb-4">Tarif : Sur demande</p>
                     <p class="text-gray-600">Développement d'un discours percutant et captivant.</p>
                 </div>
                 <!-- Carte 4: Programme Complet -->
                 <div class="bg-white rounded-lg shadow-md p-6">
                     <h4 class="text-xl font-bold text-blue-500 mb-2">Programme Complet</h4>
                     <p class="text-gray-700 mb-2">Durée : 14 heures</p>
-                    <p class="text-gray-700 font-bold mb-4">Tarif : 150 000 Fr CFA</p>
+                    <p class="text-gray-700 font-bold mb-4">Tarif : Sur demande</p>
                     <p class="text-gray-600">Accompagnement global : de la structure du discours à la maîtrise de la scène.</p>
                 </div>
             </div>
