--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coaching Vocal</title>
+    <title>CGA Formation et Coaching</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans antialiased text-gray-900 bg-gray-100">
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav class="bg-white shadow fixed w-full z-10">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <div class="text-2xl font-bold">Coach Gérard</div>
+            <div class="text-2xl font-bold">C.G.A</div>
             <ul class="hidden md:flex space-x-8">
                 <li><a href="#home" class="hover:text-indigo-600">Accueil</a></li>
                 <li><a href="#about" class="hover:text-indigo-600">À Propos</a></li>
