--- a/Home.html
+++ b/Home.html
@@ -90,17 +90,17 @@
 <section id="about" class="py-16 bg-gray-100">
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-8">À Propos</h2>
-        <div class="max-w-3xl mx-auto flex items-center">
+        <div class="flex flex-col md:flex-row items-center">
             <!-- Photo de Gérard Adjobo alignée à gauche -->
-            <div class="mr-8">
-                <img src="sirG.jpg" alt="Photo de Gérard Adjobo" class="rounded-full w-48 h-48 object-cover">
+            <div class="mb-8 md:mb-0 md:mr-8 flex-shrink-0">
+                <img src="sirG.jpg" alt="Photo de Gérard Adjobo" class="rounded-full w-32 h-32 md:w-48 md:h-48 object-cover">
             </div>
-            <!-- Logo au centre -->
-            <div class="mx-8">
-                <img src="cga_logo.png" alt="Logo CGA" class="w-48 h-48 object-contain">
+            <!-- Logo au centre (affiché sur mobile en-dessous de la photo) -->
+            <div class="mb-8 md:mb-0 md:mx-8 flex-shrink-0">
+                <img src="cga_logo.png" alt="Logo CGA" class="w-32 h-32 md:w-48 md:h-48 object-contain">
             </div>
             <!-- Texte aligné à droite et justifié -->
-            <div class="flex-1 text-justify">
+            <div class="text-justify">
                 <p>Je suis Gérard Adjobo, coach en art oratoire et éloquence. Avec dix années d'expérience, j'aide les professionnels à maîtriser leur voix et à captiver leur audience. Ma mission est de transformer vos appréhensions en confiance et votre voix en un outil puissant de communication.</p>
             </div>
         </div>
